--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,9 @@
-<!-- <app-repos-search></app-repos-search>
-<div class="row">
-  <div class="col-md-5">
-    <app-repos-list></app-repos-list>
-  </div>
-</div> -->
+<app-header> </app-header>
+
+<div class="container" style="width:100%; padding-left:0; padding-right:0;">
   <div class="row">
     <div class="col-md-12">
       <router-outlet></router-outlet>
     </div>
   </div>
+</div>
