--- a/frontend/src/app/repos/repos-search/repos-search.component.html
+++ b/frontend/src/app/repos/repos-search/repos-search.component.html
@@ -4,6 +4,7 @@
       <div class="col-sm-5 form-group">
         <label for="names">Names</label>
         <tag-input
+          theme='bootstrap'
           [editable]="true"
           id="names"
           inputClass="form-control"
