--- a/frontend/src/app/repos/repo-details/repo-details.component.html
+++ b/frontend/src/app/repos/repo-details/repo-details.component.html
@@ -1,26 +1,22 @@
 <div class="parentDiv" (click)="onClick()">
   <div class="repoDetails" (click)="$event.stopPropagation()">
-    <div class="row">
-      <div class="col-md-5">repo id:{{ repo.id }}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-5">repos name:{{ repo.name }}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">repo url:{{ repo.repo_url }}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-5">repo stars:{{ repo.stars }}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-5">repo forked:{{ repo.forked }}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-5">
-        repo depends:
-        <ul>
-          <li *ngFor="let dep of repo.deps">{{ dep.name }}</li>
-        </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12"><h1><a href="{{ repo.repo_url }}">{{ repo.name }}</a></h1></div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">repo stars:{{ repo.stars }}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">repo forked:{{ repo.forked }}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
+          repo depends:
+          <ul>
+            <li *ngFor="let dep of repo.deps">{{ dep.name }}</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
